--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,9 @@ a {
   display: block;
   background-color: transparent;
 }
+.cerrar-sesion {
+  color: var(--blanco);
+}
 
 @media (min-width: 768px) {
   .contenedor-app {
@@ -358,3 +361,5 @@ aside  {
   background-color: rgb(230, 78, 78);
   color: var(--blanco);
 }
+
+
